--- a/infrastructure/security-groups.yaml
+++ b/infrastructure/security-groups.yaml
@@ -5,10 +5,29 @@ Description: >
 
 Parameters:
     
-    EnvironmentName:
-        Description: An environment name that will be prefixed to resource names
+    RessourcePrefix:
+        Description: An ressources name prefix that will be prefixed to resource names
         Type: String
-    
+
+    EnvironmentType:
+        Description: "Definition of the Environment type: Test, Staging or Production."
+        Default: Test
+        Type: String
+        AllowedValues:
+          - Production
+          - Staging
+          - Test
+        ConstraintDescription: "You must specify Test, Staging, or Production."
+
+    ProjectName:
+        Description: Short name of project this stack is used in/for.
+        Default: Project Name
+        Type: String
+        MinLength: 2
+        MaxLength: 15
+        AllowedPattern: "[A-Za-z0-9][-. A-Za-z0-9]*"
+        ConstraintDescription: Must be between 2 and 15 characters long and may contain alphanumeric characters, hyphens (-), and dots (.), but must start with alphanumeric.
+
     VPC:
         Type: AWS::EC2::VPC::Id
         Description: Choose which VPC the security groups should be deployed to
@@ -22,6 +41,7 @@ Resources:
         Type: AWS::EC2::SecurityGroup
         Properties: 
             VpcId: !Ref VPC
+            GroupName: !Sub ${RessourcePrefix} ECS-Hosts SG
             GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
             SecurityGroupIngress:
                 # Only allow inbound access to ECS from the ELB
@@ -29,7 +49,11 @@ Resources:
                   IpProtocol: -1
             Tags: 
                 - Key: Name
-                  Value: !Sub ${EnvironmentName}-ECS-Hosts
+                  Value: !Sub ${RessourcePrefix}-ECS-Hosts
+                - Key: Environment
+                  Value: !Ref EnvironmentType
+                - Key: Project
+                  Value: !Ref ProjectName
 
     # This security group defines who/where is allowed to access the Application Load Balancer.
     # By default, we've opened this up to the public internet (0.0.0.0/0) but can you restrict
@@ -38,6 +62,7 @@ Resources:
         Type: AWS::EC2::SecurityGroup
         Properties: 
             VpcId: !Ref VPC
+            GroupName: !Sub ${RessourcePrefix} ALB SG
             GroupDescription: Access to the load balancer that sits in front of ECS
             SecurityGroupIngress:
                 # Allow access from anywhere to our ECS services
@@ -45,7 +70,11 @@ Resources:
                   IpProtocol: -1
             Tags: 
                 - Key: Name
-                  Value: !Sub ${EnvironmentName}-LoadBalancers
+                  Value: !Sub ${RessourcePrefix}-LoadBalancers
+                - Key: Environment
+                  Value: !Ref EnvironmentType
+                - Key: Project
+                  Value: !Ref ProjectName
 
 Outputs:
 
