--- a/master.yaml
+++ b/master.yaml
@@ -14,14 +14,38 @@ Description: >
     Last Modified: 22nd September 2016
     Author: Paul Maddox <pmaddox@amazon.com>
 
+Parameters:
+  RessourcePrefix:
+    Description: An ressources name prefix that will be prefixed to resource names
+    Type: String
+  EnvironmentType:
+    Description: 'Definition of the Environment type: Test, Staging or Production.'
+    Default: Test
+    Type: String
+    AllowedValues:
+      - Production
+      - Staging
+      - Test
+    ConstraintDescription: 'You must specify Test, Staging, or Production.'
+  ProjectName:
+    Description: Short name of project this stack is used in/for.
+    Default: Project Name
+    Type: String
+    MinLength: 2
+    MaxLength: 15
+    AllowedPattern: '[A-Za-z0-9][-. A-Za-z0-9]*'
+    ConstraintDescription: 'Must be between 2 and 15 characters long and may contain alphanumeric characters, hyphens (-), and dots (.), but must start with alphanumeric.'
+
 Resources:
 
     VPC:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/vpc.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/infrastructure/vpc.yaml
             Parameters:
-                EnvironmentName:    !Ref AWS::StackName
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 VpcCIDR:            10.180.0.0/16
                 PublicSubnet1CIDR:  10.180.8.0/21
                 PublicSubnet2CIDR:  10.180.16.0/21
@@ -31,17 +55,21 @@ Resources:
     SecurityGroups:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/security-groups.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/infrastructure/security-groups.yaml
             Parameters: 
-                EnvironmentName: !Ref AWS::StackName
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 VPC: !GetAtt VPC.Outputs.VPC
 
     ALB:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/load-balancers.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/infrastructure/load-balancers.yaml
             Parameters:
-                EnvironmentName: !Ref AWS::StackName
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 VPC: !GetAtt VPC.Outputs.VPC
                 Subnets: !GetAtt VPC.Outputs.PublicSubnets
                 SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
@@ -49,9 +77,11 @@ Resources:
     ECS:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/ecs-cluster.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/infrastructure/ecs-cluster.yaml
             Parameters:
-                EnvironmentName: !Ref AWS::StackName
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 InstanceType: t2.large
                 ClusterSize: 4
                 VPC: !GetAtt VPC.Outputs.VPC
@@ -61,8 +91,11 @@ Resources:
     ProductService:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/services/product-service/service.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/services/product-service/service.yaml
             Parameters:
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 VPC: !GetAtt VPC.Outputs.VPC
                 Cluster: !GetAtt ECS.Outputs.Cluster
                 DesiredCount: 2
@@ -72,8 +105,11 @@ Resources:
     WebsiteService:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/services/website-service/service.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/services/website-service/service.yaml
             Parameters:
+                RessourcePrefix:    !Ref RessourcePrefix
+                EnvironmentType:    !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 VPC: !GetAtt VPC.Outputs.VPC
                 Cluster: !GetAtt ECS.Outputs.Cluster
                 DesiredCount: 2
@@ -85,10 +121,24 @@ Resources:
     LifecycleHook:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/lifecyclehook.yaml
+            TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/infrastructure/lifecyclehook.yaml
             Parameters:
+                EnvironmentType: !Ref EnvironmentType
+                ProjectName: !Ref ProjectName
                 Cluster: !GetAtt ECS.Outputs.Cluster
                 ECSAutoScalingGroupName: !GetAtt ECS.Outputs.ECSAutoScalingGroupName
+
+Conditions:
+
+  CreateProductionResources: !Equals 
+    - !Ref EnvironmentType
+    - Production
+  CreateStagingResources: !Equals 
+    - !Ref EnvironmentType
+    - Staging
+  CreateTestResources: !Equals 
+    - !Ref EnvironmentType
+    - Test
 
 Outputs:
 
@@ -99,3 +149,6 @@ Outputs:
     WebsiteServiceUrl: 
         Description: The URL endpoint for the website service
         Value: !Join ["", [ !GetAtt ALB.Outputs.LoadBalancerUrl, "/" ]]
+
+    StackName:
+        Value: !Ref AWS::StackName
