--- a/stack-sample.yaml
+++ b/stack-sample.yaml
@@ -1,19 +1,25 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: WrapperTemplate
-Resources:
-  WrappedStackWithStackLevelTags:
-    Type: 'AWS::CloudFormation::Stack'
-    Properties:
-      Tags:
-        - Key: Environment
-          Value: Test
-        - Key: Project
-          Value: Demo
-      TemplateURL: 'https://s3.amazonaws.com/ecs-refarch-cloudformation/master.yaml'
+Description: >
+
+    WrapperTemplate for environment dependent ECS Stack creation with multiple wrapped stack templates.
+
+    Last Modified: 18th July 2018
+    Author: Jens R.
+
+    This template deploys a VPC, with a pair of public and private subnets spread 
+    across two Availabilty Zones. It deploys an Internet Gateway, with a default 
+    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
+    and default routes for them in the private subnets.
+
+    It then deploys a highly available ECS cluster using an AutoScaling Group, with 
+    ECS hosts distributed across multiple Availability Zones. 
+
+    Finally, it deploys a pair of example ECS services from containers published in 
+    Amazon EC2 Container Registry (Amazon ECR).
 
 Parameters:
   EnvironmentType:
-    Description: Environment type.
+    Description: 'Definition of the Environment type: Test, Staging or Production.'
     Default: Test
     Type: String
     AllowedValues:
@@ -21,14 +27,31 @@ Parameters:
       - Staging
       - Test
     ConstraintDescription: 'You must specify Test, Staging, or Production.'
+  ProjectName:
+    Description: Short project name or slug this stack is used in/for. Used for tagging.
+    Default: Project Name
+    Type: String
+    MinLength: 2
+    MaxLength: 15
+    AllowedPattern: '[A-Za-z0-9][-. A-Za-z0-9]*'
+    ConstraintDescription: 'Must be between 2 and 15 characters long and may contain alphanumeric characters, hyphens (-), and dots (.), but must start with alphanumeric.'
+  RessourcePrefix:
+    Description: An ressources name prefix that will be used for resource names
+    Type: String
+    AllowedPattern: '[-A-Za-z0-9]*'
+    ConstraintDescription: 'Can only contain characters that are alphanumeric characters or hyphens(-).'
 
-Conditions:
-  CreateProductionResources: !Equals 
-    - !Ref EnvironmentType
-    - Production
-  CreateStagingResources: !Equals 
-    - !Ref EnvironmentType
-    - Staging
-  CreateTestResources: !Equals 
-    - !Ref EnvironmentType
-    - Test
+Resources:
+  Wrap:
+    Type: 'AWS::CloudFormation::Stack'
+    Properties:
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Project
+          Value: !Ref ProjectName
+      TemplateURL: 'https://s3.amazonaws.com/ecs-refarch-cloudformation-ff24/master.yaml'
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        ProjectName: !Ref ProjectName
+        RessourcePrefix: !Sub ${RessourcePrefix}-${EnvironmentType}
